# 3D-Object-Viewer

./: CMakeLists.txt  Camera.cpp  Camera.h  Makefile  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
include/glad/: glad.h
shaders/: shader.frag  shader.vert
src/: glad.c  main.cpp
src/shaders/: fragmentShader.glsl  vertexShader.glsl
